--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -7,17 +7,17 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" android:background="@color/lightGrayBackground">
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="70dp" android:background="@color/lightGrayBackground">
+                android:layout_height="119dp" android:background="@color/lightGrayBackground" android:gravity="center">
             <TextView
                     android:text="CURRENT_PLAYER"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/currentPlayerTextField"
                     android:textAlignment="center" android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" android:textSize="18sp"/>
+                    android:textStyle="bold" android:textSize="22sp"/>
             <Chronometer
                     android:id="@+id/timer"
                     android:layout_width="match_parent"
@@ -27,7 +27,8 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_gravity="center">
+                android:layout_height="wrap_content" android:layout_gravity="center" android:padding="26dp"
+                android:background="@android:color/background_light">
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -101,11 +102,8 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:background="@color/lightGrayBackground"
-        >
-            <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="26dp"/>
+                android:layout_height="97dp"
+                android:gravity="center">
             <Button
                     android:text="Restart"
                     android:layout_width="match_parent"
