--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -9,11 +9,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:background="@color/lightGrayBackground">
         <TextView
-                android:text="Super Tic Tac"
+                android:text="super tic tac"
                 android:layout_width="match_parent"
                 android:layout_height="104dp" android:id="@+id/textView" android:textStyle="bold"
                 android:textSize="32sp" android:textAlignment="center" android:textColor="@android:color/black"
-                android:gravity="center"/>
+                android:gravity="center" android:fontFamily="@font/super_mario_font" android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -22,46 +23,55 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" android:background="@color/onePlayerBackground"
-                    android:layout_marginBottom="8dp" android:gravity="center" android:id="@+id/player1Box">
+                    android:layout_marginBottom="8dp" android:gravity="center" android:id="@+id/player1Box"
+                    android:paddingBottom="16dp" android:paddingTop="16dp">
                 <ImageView
                         android:src="@drawable/player_mario"
                         android:layout_width="56dp"
                         android:layout_height="75dp" android:id="@+id/imageView"
                         android:background="@drawable/player_mario" android:scaleType="centerInside"/>
-                <Button
-                        android:text="1 PLAYER: BOT"
+                <Space
                         android:layout_width="match_parent"
-                        android:layout_height="80dp" android:id="@+id/playButton"
-                        style="@style/Widget.AppCompat.Button.Borderless" android:textSize="24sp"
-                        android:textStyle="bold" android:textColor="@android:color/white"/>
+                        android:layout_height="13dp"/>
+                <TextView
+                        android:text="1 PLAYER"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/textView3"
+                        android:textAlignment="center" android:textStyle="bold"
+                        android:textColor="@android:color/white"/>
+                <TextView
+                        android:text="CPU"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="32sp"
+                        android:textAlignment="center" android:textStyle="bold"
+                        android:textColor="@android:color/white"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:background="@color/twoPlayerBackground"
-                    android:gravity="center" android:id="@+id/player2Box">
-                <LinearLayout
-                        android:orientation="horizontal"
+                    android:layout_height="match_parent" android:background="@drawable/rounded_background"
+                    android:layout_marginBottom="8dp" android:gravity="center" android:id="@+id/player2Box"
+                    android:paddingBottom="16dp" android:paddingTop="16dp">
+                <ImageView
+                        android:src="@drawable/player_mario"
+                        android:layout_width="56dp"
+                        android:layout_height="75dp" android:id="@+id/imageView"
+                        android:background="@drawable/player_luigi" android:scaleType="centerInside"/>
+                <Space
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" android:gravity="center">
-                    <ImageView
-                            android:src="@drawable/player_mario"
-                            android:layout_width="56dp"
-                            android:layout_height="75dp" android:id="@+id/imageView"
-                            android:background="@drawable/player_mario" android:scaleType="centerInside"/>
-                    <ImageView
-                            android:src="@drawable/player_mario"
-                            android:layout_width="56dp"
-                            android:layout_height="75dp" android:id="@+id/imageView2"
-                            android:background="@drawable/player_luigi" android:scaleType="fitXY"
-                    />
-                </LinearLayout>
-                <Button
-                        android:text="2 PLAYER: BATTLE"
+                        android:layout_height="13dp"/>
+                <TextView
+                        android:text="2 PLAYER"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp" android:id="@+id/playButton"
-                        style="@style/Widget.AppCompat.Button.Borderless" android:textSize="24sp"
-                        android:textStyle="bold" android:textColor="@android:color/white"/>
+                        android:layout_height="wrap_content" android:id="@+id/textView3"
+                        android:textAlignment="center" android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"/>
+                <TextView
+                        android:text="Battle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="32sp"
+                        android:textAlignment="center" android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"/>
             </LinearLayout>
             <Button
                     android:text="Leaderboard"
