--- a/TicTacToe/app/src/main/res/navigation/nav_graph.xml
+++ b/TicTacToe/app/src/main/res/navigation/nav_graph.xml
@@ -7,8 +7,8 @@
               android:label="fragment_main" tools:layout="@layout/fragment_main">
         <action android:id="@+id/action_mainFragment_to_startFragment"
                 app:destination="@+id/startFragment"
-                app:enterAnim="@anim/slide_in_right"
-                app:popEnterAnim="@anim/slide_in_right"/>
+                app:popUpTo="@+id/mainFragment" app:enterAnim="@anim/slide_in_right"
+                app:popEnterAnim="@anim/slide_in_left"/>
         <action android:id="@+id/action_mainFragment_to_leaderboardFragment" app:destination="@id/leaderboardFragment"
                 app:enterAnim="@anim/fade_in" app:popEnterAnim="@anim/fade_in"/>
     </fragment>
@@ -17,10 +17,10 @@
               android:label="fragment_game"
               tools:layout="@layout/fragment_game"/>
 
-    <fragment android:id="@+id/startFragment" android:name="no.jahnsrud.tictactoe.StartFragment"
-              android:label="fragment_start" tools:layout="@layout/fragment_start">
+    <fragment android:id="@+id/startFragment" android:name="no.jahnsrud.tictactoe.PlayersFragment"
+              android:label="fragment_start" tools:layout="@layout/fragment_players">
         <action android:id="@+id/action_startFragment_to_gameFragment" app:destination="@id/gameFragment"
-                app:enterAnim="@anim/fade_in" app:popEnterAnim="@anim/fade_in"/>
+                app:enterAnim="@anim/fade_in" app:popEnterAnim="@anim/fade_in" app:popUpTo="@+id/mainFragment"/>
     </fragment>
     <fragment android:id="@+id/leaderboardFragment" android:name="no.jahnsrud.tictactoe.LeaderboardFragment"
               android:label="fragment_leaderboard" tools:layout="@layout/fragment_leaderboard"/>
