--- a/TicTacToe/app/src/main/res/values/colors.xml
+++ b/TicTacToe/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
     <color name="lightGrayBackground">#F2F2F2</color>
-    <color name="onePlayerBackground">#777B97</color>
+    <color name="onePlayerBackground">#000000</color>
     <color name="twoPlayerBackground">#3C3C3C</color>
 </resources>
