--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -123,7 +123,7 @@
                 android:layout_height="154dp"
                 android:gravity="center">
             <Button
-                    android:text="Restart"
+                    android:text="Pause"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/resetButton"/>
             <Button
