--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".GameFragment">
@@ -11,7 +11,22 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="119dp" android:background="@color/lightGrayBackground" android:gravity="center">
+                android:layout_height="160dp" android:background="@color/lightGrayBackground" android:gravity="center">
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="72dp" android:gravity="center">
+                <ImageView
+                        android:src="@drawable/mario_selected"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp" android:id="@+id/player1Image"
+                        android:layout_marginRight="4dp"/>
+                <ImageView
+                        android:src="@drawable/luigi_unselected"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp" android:id="@+id/player2Image"
+                        android:layout_marginLeft="4dp"/>
+            </LinearLayout>
             <TextView
                     android:text="CURRENT_PLAYER"
                     android:layout_width="match_parent"
@@ -22,7 +37,7 @@
                     android:id="@+id/timer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center" android:textStyle="bold"/>
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
@@ -120,8 +135,8 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="154dp"
-                android:gravity="center">
+                android:layout_height="match_parent"
+                android:gravity="bottom|center_horizontal" android:layout_marginBottom="16dp">
             <Button
                     android:text="Pause"
                     android:layout_width="match_parent"
