--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -53,12 +53,12 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:gravity="center" android:layout_gravity="center"
+                android:layout_height="match_parent" android:gravity="center" android:layout_gravity="center"
                 android:padding="2dp" android:layout_marginTop="10dp">
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:layout_gravity="center"
+                    android:layout_height="match_parent" android:layout_gravity="center"
                     android:layout_margin="10dp">
                 <LinearLayout
                         android:orientation="horizontal"
@@ -140,26 +140,57 @@
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                             android:scaleType="centerInside" android:background="@color/lightGrayBackground"/>
                 </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="bottom|center_horizontal" android:layout_marginBottom="32dp">
-            <Chronometer
-                    android:id="@+id/timer"
-                    android:layout_width="100dp"
-                    android:layout_height="36dp"
-                    android:textAlignment="center" android:textStyle="bold" android:layout_marginBottom="16dp"
-                    android:textSize="16sp" android:background="@drawable/rounded_background" android:gravity="center"
-                    android:textColor="@color/colorPrimary"/>
-            <Button
-                    android:text="❙❙"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content" android:id="@+id/pauseButton"
-                    style="@style/Widget.AppCompat.Button.Borderless" android:textSize="32sp"/>
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom|center_horizontal" android:layout_marginBottom="32dp"
+                        android:layout_marginTop="64dp" android:layout_weight="1">
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom|center|center_vertical"
+                            android:background="@drawable/rounded_background"
+                            android:layout_gravity="bottom" android:id="@+id/gameControllers">
+                        <Chronometer
+                                android:id="@+id/timer"
+                                android:layout_width="100dp"
+                                android:layout_height="36dp"
+                                android:textAlignment="textStart" android:textStyle="bold"
+                                android:textSize="18sp" android:background="@android:color/white"
+                                android:gravity="center"
+                                android:textColor="@color/colorPrimary" android:layout_gravity="center"
+                                android:layout_weight="1" android:layout_marginLeft="32dp"/>
+                        <Button
+                                android:text="❙❙"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content" android:id="@+id/pauseButton"
+                                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom|center|center_vertical"
+                            android:background="@drawable/rounded_background"
+                            android:id="@+id/gameOverView" android:layout_gravity="bottom|center">
+                        <TextView
+                                android:text="STATUS"
+                                android:layout_width="130dp"
+                                android:layout_height="36dp" android:id="@+id/gameOverText" android:textSize="18sp"
+                                android:textStyle="bold" android:layout_weight="1"
+                                android:textColor="@android:color/black" android:layout_marginLeft="32dp"
+                                android:gravity="bottom|center_vertical"/>
+                        <Button
+                                android:text="↻"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content" android:id="@+id/restartButton"
+                                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"/>
+                    </LinearLayout>
 
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
